fix: made valid layout for catalog.html

--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -1,82 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="..\Images\croissant.png" type="image/png" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="catalog.css" />
-    <link rel="stylesheet" href="..\changeColor.css" />
-    <link rel="stylesheet" href="..\changeColor.css" />
-    <link rel="stylesheet" href="..\effects.css" />
+    <meta charset="UTF-8" >
+    <link rel="icon" href="../Images/croissant.png" type="image/png" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="catalog.css" >
+    <link rel="stylesheet" href="../changeColor.css">
+    <link rel="stylesheet" href="../changeColor.css" >
+    <link rel="stylesheet" href="../effects.css" >
     <title>Catalog</title>
-  </head>
-  <header class="header theme-specialElement">
-    <div class="hamburger-menu theme-specialElement">
-      <input id="menu__toggle" type="checkbox" />
-      <label class="menu__btn" for="menu__toggle">
-        <span></span>
-      </label>
-      <ul class="menu__box theme-specialElement">
-        <li>
-          <a
-            class="menu__item theme-specialElement"
-            data-i18="Catalog"
-            href="#catalog"
+  </head> 
+  <body class="body theme-element">
+    <header class="header theme-specialElement">
+      <div class="hamburger-menu theme-specialElement">
+        <input id="menu__toggle" type="checkbox" >
+        <label class="menu__btn" for="menu__toggle">
+          <span></span>
+        </label>
+        <ul class="menu__box theme-specialElement">
+          <li>
+            <a
+              class="menu__item theme-specialElement"
+              data-i18="Catalog"
+              href="#catalog"
+              >Catalog</a
+            >
+          </li>
+          <li>
+            <a
+              class="menu__item theme-specialElement"
+              data-i18="Delivery"
+              href="#delivery"
+              >Delivery</a
+            >
+          </li>
+        </ul>
+      </div>
+      <a href="../Tarla/index.html"
+        ><img class="logo" src="../Images/Frame.png" alt="logo"
+      ></a>
+  
+      <ul class="navigation">
+        <li class="li">
+          <a class="link theme-specialElement" data-i18="Catalog" href="#catalog"
             >Catalog</a
           >
         </li>
-        <li>
+        <li class="li">
           <a
-            class="menu__item theme-specialElement"
+            class="link theme-specialElement"
             data-i18="Delivery"
             href="#delivery"
             >Delivery</a
           >
         </li>
       </ul>
-    </div>
-    <a href="..\Tarla\index.html"
-      ><img class="logo" src="..\Images\Frame.png" alt="logo"
-    /></a>
-
-    <ul class="navigation">
-      <li class="li">
-        <a class="link theme-specialElement" data-i18="Catalog" href="#catalog"
-          >Catalog</a
-        >
-      </li>
-      <li class="li">
-        <a
-          class="link theme-specialElement"
-          data-i18="Delivery"
-          href="#delivery"
-          >Delivery</a
-        >
-      </li>
-    </ul>
-
-    <div class="switchers">
-      <button data-i18="en" class="switcher changeButton theme-blueButton">
-        <img src="..\Images\UK.png" alt="light" />
-      </button>
-      <button data-i18="ru" class="switcher changeButton theme-blueButton">
-        <img src="..\Images\russia.png" alt="light" />
-      </button>
-    </div>
-    <div class="switchers">
-      <button class="changeButton theme-blueButton" id="light-theme-btn">
-        <img src="..\Images\sun.png" alt="light" />
-      </button>
-      <button class="changeButton theme-blueButton" id="dark-theme-btn">
-        <img src="..\Images\night.png" alt="light" />
-      </button>
-    </div>
-  </header>
-  <body class="body theme-element">
+      <div class="switchers">
+        <button data-i18="en" class="switcher changeButton theme-blueButton">
+          <img src="../Images/UK.png" alt="light" >
+        </button>
+        <button data-i18="ru" class="switcher changeButton theme-blueButton">
+          <img src="../Images/russia.png" alt="light" >
+        </button>
+      </div>
+      <div class="switchers">
+        <button class="changeButton theme-blueButton" id="light-theme-btn">
+          <img src="../Images/sun.png" alt="light" >
+        </button>
+        <button class="changeButton theme-blueButton" id="dark-theme-btn">
+          <img src="../Images/night.png" alt="light" >
+        </button>
+      </div>
+    </header>
     <section id="catalog" class="section theme-element">
       <div class="card theme-element">
-        <img class="visible" src="..\Images\3-1.png" alt="" />
+        <img class="visible" src="../Images/3-1.png" alt="" >
         <div class="div baseText">
           <h2 data-i18="AllButter" class="mainText">All-Butter Croissant</h2>
           <p data-i18="AllButterDiv">
@@ -87,7 +86,7 @@
             that fills the air, enticing the senses with its irresistible
             allure.
           </p>
-          <img class="unvisible" id="catalog" src="..\Images\3-1.png" alt="" />
+          <img class="unvisible" src="../Images/3-1.png" alt="" >
           <h3 data-i18="Composition" class="mainText">Composition</h3>
           <p data-i18="AllButterComp">
             flour, butter, water, milk, sugar, salt, yeast
@@ -105,7 +104,7 @@
             topped with a generous sprinkling of sliced almonds, adding a
             delightful crunch and nutty flavor to every bite.
           </p>
-          <img class="unvisible" id="catalog" src="..\Images\3-2.png" alt="" />
+          <img class="unvisible" src="../Images/3-2.png" alt="" >
           <h3 data-i18="Composition" class="mainText">Composition</h3>
           <p data-i18="AlmondComp">
             flour, butter, water, milk, sugar, salt, yeast, almonds (whole or
@@ -113,10 +112,10 @@
           </p>
           <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
-        <img class="visible" src="..\Images\3-2.png" alt="" />
+        <img class="visible" src="../Images/3-2.png" alt="" >
       </div>
       <div class="card theme-element">
-        <img class="visible" src="..\Images\3-3.png" alt="" />
+        <img class="visible" src="../Images/3-3.png" alt="" >
         <div class="div baseText">
           <h2 data-i18="Raspberry" class="mainText">Raspberry Danish</h2>
           <p data-i18="RaspberryDif">
@@ -128,7 +127,7 @@
             sugar, enhancing its visual appeal and adding a touch of extra
             sweetness.
           </p>
-          <img class="unvisible" id="catalog" src="..\Images\3-3.png" alt="" />
+          <img class="unvisible" src="../Images/3-3.png" alt="" >
           <h3 data-i18="Composition" class="mainText">Composition</h3>
           <p data-i18="RaspberryComp">
             flour, butter, sugar, salt, yeast, eggs, milk, raspberry compote or
@@ -140,7 +139,7 @@
       </div>
       <div class="card theme-element">
         <div class="div baseText">
-          <h2 data-i18="PainAuxPaisins" PainAuxPaisins class="mainText">
+          <h2 data-i18="PainAuxPaisins" class="mainText">
             Pain Aux Raisins
           </h2>
           <p data-i18="PainAuxPaisinsDif">
@@ -151,7 +150,7 @@
             pastry cream, and sprinkled with raisins before being rolled into a
             spiral shape.
           </p>
-          <img class="unvisible" id="catalog" src="..\Images\3-4.png" alt="" />
+          <img class="unvisible" src="../Images/3-4.png" alt="" >
           <h3 data-i18="Composition" class="mainText">Composition</h3>
           <p data-i18="PainAuxPaisinsDif">
             flour, butter, sugar, salt, yeast, eggs, milk, pastry cream,
@@ -159,11 +158,11 @@
           </p>
           <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
-        <img class="visible" src="..\Images\3-4.png" alt="" />
+        <img class="visible" src="../Images/3-4.png" alt="" >
       </div>
       <div class="card theme-element">
-        <img class="visible" src="..\Images\3-5.png" alt="" />
-        <div div class="div baseText">
+        <img class="visible" src="../Images/3-5.png" alt="" >
+        <div class="div baseText">
           <h2 data-i18="Apricot" class="mainText">Apricot Danish</h2>
           <p data-i18="ApricotDif">
             An apricot Danish is a delightful pastry that combines tender, flaky
@@ -173,7 +172,7 @@
             every bite. Danish is often adorned with a light glaze or dusting of
             powdered sugar, enhancing its sweetness and visual appeal.
           </p>
-          <img class="unvisible" id="catalog" src="..\Images\3-5.png" alt="" />
+          <img class="unvisible" src="../Images/3-5.png" alt="" >
           <h3 data-i18="Composition" class="mainText">Composition</h3>
           <p data-i18="ApricotComp">
             flour, butter, sugar, salt, yeast, eggs, milk, apricot jam or
@@ -184,7 +183,7 @@
         </div>
       </div>
       <div class="card theme-element">
-        <div div class="div baseText">
+        <div class="div baseText">
           <h2 data-i18="PainAuChocolate" class="mainText">Pain Au Chocolat</h2>
           <p data-i18="PainAuChocolateDif">
             Pain au chocolat, also known as a chocolate croissant, is a
@@ -195,18 +194,18 @@
             emerges from the oven with a golden-brown exterior and a melty,
             chocolatey interior.
           </p>
-          <img class="unvisible" id="catalog" src="..\Images\3-6.png" alt="" />
+          <img class="unvisible" src="../Images/3-6.png" alt="" >
           <h3 data-i18="Composition" class="mainText">Composition</h3>
           <p data-i18="PainAuChocolateComp">
             flour, butter, water, milk, sugar, salt, yeast, dark chocolate
           </p>
           <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
-        <img class="visible" src="..\Images\3-6.png" alt="" />
+        <img class="visible" src="../Images/3-6.png" alt="" >
       </div>
     </section>
-    <img class="img" src="..\Images\fone.jpg" alt="" />
-    <section class="delivery baseText theme-element">
+    <img class="img" src="../Images/fone.jpg" alt="" >
+    <div class="delivery baseText theme-element">
       <div id="delivery" class="divDelivery">
         <p data-i18="SelfPickup" class="mainText">Self-Pickup</p>
         <ul>
@@ -247,44 +246,44 @@
           <li data-i18="CourierDelivery3">The delivery cost is 300 rubles.</li>
         </ul>
       </div>
-    </section>
-  </body>
-  <footer class="footer theme-element">
-    <div class="icon">
-      <a href="tel:+375295950858">
-        <img src="..\Images\phone.png" alt="Telephone" />
-      </a>
-      <a href="https://github.com/MaltSun/TarlaProgect"
-        ><img src="..\Images\github.png" alt="Github"
-      /></a>
-      <a href="mailto:polina.solodkova507@gmail.com">
-        <img src="..\Images\e-mail.png" alt="E-mail" />
-      </a>
     </div>
-    <div class="divfooter">
-      <a data-i18="Tarla" class="link theme-element" href="..\Tarla\index.html"
-        >Tarla</a
-      >
-      <a
-        data-i18="headerHowItWork"
-        class="link theme-element"
-        href="..\Tarla\index.html"
-        >How to use</a
-      >
-      <a
-        data-i18="Legend"
-        class="link theme-element"
-        href="..\Tarla\aboutUs.html"
-        >Legend</a
-      >
-      <a
-        data-i18="Privacy"
-        class="link theme-element"
-        href="..\Tarla\aboutUs.html"
-        >Privacy Policy</a
-      >
-    </div>
-    <script src="..\changeLanguage.js"></script>
-    <script src="..\changeColor.js"></script>
-  </footer>
+    <footer class="footer theme-element">
+      <div class="icon">
+        <a href="tel:+375295950858">
+          <img src="../Images/phone.png" alt="Telephone" >
+        </a>
+        <a href="https://github.com/MaltSun/TarlaProgect"
+          ><img src="../Images/github.png" alt="Github"
+        ></a>
+        <a href="mailto:polina.solodkova507@gmail.com">
+          <img src="../Images/e-mail.png" alt="E-mail" >
+        </a>
+      </div>
+      <div class="divfooter">
+        <a data-i18="Tarla" class="link theme-element" href="../Tarla/index.html"
+          >Tarla</a
+        >
+        <a
+          data-i18="headerHowItWork"
+          class="link theme-element"
+          href="../Tarla/index.html"
+          >How to use</a
+        >
+        <a
+          data-i18="Legend"
+          class="link theme-element"
+          href="../Tarla/aboutUs.html"
+          >Legend</a
+        >
+        <a
+          data-i18="Privacy"
+          class="link theme-element"
+          href="../Tarla/aboutUs.html"
+          >Privacy Policy</a
+        >
+      </div>
+      <script src="../changeLanguage.js"></script>
+      <script src="../changeColor.js"></script>
+    </footer>
+  </body>  
 </html>
