--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaStyle.css">
     <link rel="stylesheet" href="swaper.css">
-    <link rel="stylesheet" href="../changeColor.css">
-    <link rel="stylesheet" href="../effects.css">
+    <link rel="stylesheet" href="../Function/changeColor.css">
+    <link rel="stylesheet" href="../Function/effects.css">
   </head>
    <body class="body theme-element">
     <header class="header theme-element">
-      <div class="hamburger-menu theme-element">
+      <div class="hamburger-menu theme-element hamburg">
         <input id="menu__toggle" type="checkbox">
         <label class="menu__btn" for="menu__toggle">
           <span></span>
@@ -304,8 +304,8 @@
         >
       </div>
       <script src="../Tarla/swaper.js"></script>
-      <script src="../changeLanguage.js"></script>
-      <script src="../changeColor.js"></script>
+      <script src="../Function/changeLanguage.js"></script>
+      <script src="../Function/changeColor.js"></script>
     </footer>
   </body>
 </html>
