--- a/Tarla/aboutUs.html
+++ b/Tarla/aboutUs.html
@@ -6,12 +6,12 @@
     <title>About us</title>
     <link rel="icon" href="../Images/croissant.png" type="image/png">
     <link rel="stylesheet" href="../Tarla/aboutUs.css" >
-    <link rel="stylesheet" href="../changeColor.css" >
-    <link rel="stylesheet" href="../effects.css" >
+    <link rel="stylesheet" href="../Function/changeColor.css" >
+    <link rel="stylesheet" href="../Function/effects.css" >
   </head>    
   <body class="body theme-element">
     <header class="header theme-specialElement">
-      <div class="hamburger-menu theme-specialElement">
+      <div class="hamburger-menu theme-specialElement hamburg">
         <input id="menu__toggle" type="checkbox" >
         <label class="menu__btn" for="menu__toggle">
           <span></span>
@@ -171,8 +171,8 @@
     <a data-i18="Price" class="link theme-element" href="../Tarla/catalog.html">Prices</a>
   </div>
   <script src="../Tarla/swaper.js"></script>
-  <script src="../changeLanguage.js"></script>
-  <script src="../changeColor.js"></script>
+  <script src="../Function/changeLanguage.js"></script>
+  <script src="../Function/changeColor.js"></script>
     </footer> 
   </body>  
 </html>
