--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="catalog.css" >
-    <link rel="stylesheet" href="../changeColor.css">
-    <link rel="stylesheet" href="../changeColor.css" >
-    <link rel="stylesheet" href="../effects.css" >
+    <link rel="stylesheet" href="../Function/changeColor.css">
+    <link rel="stylesheet" href="../Function/effects.css" >
     <title>Catalog</title>
   </head> 
   <body class="body theme-element">
     <header class="header theme-specialElement">
-      <div class="hamburger-menu theme-specialElement">
+      <div class="hamburger-menu theme-specialElement hamburg">
         <input id="menu__toggle" type="checkbox" >
         <label class="menu__btn" for="menu__toggle">
           <span></span>
@@ -37,8 +36,8 @@
           </li>
         </ul>
       </div>
-      <a href="../Tarla/index.html"
-        ><img class="logo" src="../Images/Frame.png" alt="logo"
+      <a class="logo" href="../Tarla/index.html"
+        ><img  src="../Images/Frame.png" alt="logo"
       ></a>
   
       <ul class="navigation">
@@ -282,8 +281,8 @@
           >Privacy Policy</a
         >
       </div>
-      <script src="../changeLanguage.js"></script>
-      <script src="../changeColor.js"></script>
+      <script src="../Function/changeLanguage.js"></script>
+      <script src="../Function/changeColor.js"></script>
     </footer>
   </body>  
 </html>
