--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -227,52 +227,108 @@
           <a href="" class="popupClose closePopup">x</a>
           <form id="registrationForm" class="registrationForm">
             <div class="form-group">
-              <label for="phone">Номер телефона (РБ):</label>
-              <input type="text" id="phone" name="phone" placeholder="Номер телефона" required>
+              <label data-i18="Phone" for="phone">Номер телефона (РБ):</label>
+              <input
+              data-i18="Phone"
+                type="text"
+                id="phone"
+                name="phone"
+                placeholder="Номер телефона"
+                required
+              >
               <span class="error" id="phoneError"></span>
-          </div>
-          <div class="form-group">
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" placeholder="Email" required>
+            </div>
+            <div class="form-group">
+              <label data-i18="Email" for="email">Email:</label>
+              <input
+              data-i18="Email"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Email"
+                required
+              >
               <span class="error" id="emailError"></span>
-          </div>
-          <div class="form-group">
-              <label for="dob">Дата рождения:</label>
+            </div>
+            <div class="form-group">
+              <label data-i18="bdd" for="dob">Дата рождения:</label>
               <input type="date" id="dob" name="dob" required>
               <span class="error" id="dobError"></span>
-          </div>
-          <div class="form-group">
-              <label for="password">Пароль:</label>
-              <input type="password" id="password" name="password" placeholder="Пароль" required>
+            </div>
+            <div class="form-group">
+              <label data-i18="Password" for="password">Пароль:</label>
+              <input
+              data-i18="Password"
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Пароль"
+                required
+              >
               <span class="error" id="passwordError"></span>
-          </div>
-          <div class="form-group">
-              <label for="confirmPassword">Повторите пароль:</label>
-              <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Повторите пароль" required>
+            </div>
+            <div class="form-group">
+              <label data-i18="confirmPassword" for="confirmPassword">Повторите пароль:</label>
+              <input
+              data-i18="confirmPassword"
+                type="password"
+                id="confirmPassword"
+                name="confirmPassword"
+                placeholder="Повторите пароль"
+                required
+              >
               <span class="error" id="confirmPasswordError"></span>
-          </div>
-          <div class="form-group">
-              <label for="fullname">ФИО:</label>
-              <input type="text" id="fullname" name="fullname" placeholder="ФИО" required>
+            </div>
+            <div class="form-group">
+              <label data-i18="fullname" for="fullname">ФИО:</label>
+              <input
+              data-i18="fullname"
+                type="text"
+                id="fullname"
+                name="fullname"
+                placeholder="ФИО"
+                required
+              >
               <span class="error" id="fullnameError"></span>
-          </div>
-          <div class="form-group">
-              <label for="nickname">Никнейм:</label>
-              <input type="text" id="nickname" name="nickname" placeholder="Никнейм" readonly required>
-              <button type="button" id="regenerateNickname" class="registrationButton">Сгенерировать никнейм</button>
+            </div>
+            <div class="form-group">
+              <label data-i18="Nickname" for="nickname">Никнейм:</label>
+              <input
+              data-i18="Nickname"
+                type="text"
+                id="nickname"
+                name="nickname"
+                placeholder="Никнейм"
+                required
+                readonly
+              >
+              <button
+              data-i18="generateNickname"
+                type="button"
+                id="regenerateNickname"
+                class="registrationButton"
+              >
+                Сгенерировать никнейм
+              </button>
               <span class="error" id="nicknameError"></span>
-          </div>
-          <div class="form-group">
+            </div>
+            <div class="form-group">
               <input type="checkbox" id="agreement" name="agreement" required>
-              <label for="agreement">Я прочитал(а) и согласен(а) с <a href="#">Соглашением пользователя</a></label>
+              <label for="agreement" data-i18="ReadAndEgree"
+                >Я прочитал(а) и согласен(а) с
+                <a data-i18="Egree" href="#">Соглашением пользователя</a></label
+              >
               <span class="error" id="agreementError"></span>
-          </div>
-          <button type="submit" class="registration registrationButton">Зарегистрироваться</button>
-          <span class="success" id="successMessage"></span>
-        </form> 
+            </div>
+            <button data-i18="Registration" type="submit" class="registration registrationButton">
+              Зарегистрироваться
+            </button>
+            <span class="success" id="successMessage"></span>
+            <span class="error" id="accountError"></span>
+          </form>
         </div>
-      </div>  
-      <script src="../Function/signUp.js"></script>  
+      </div>
+      <script src="../Function/signUp.js"></script>
     </div>
     <script src="popup.js"></script>
   <footer class="footer theme-element" >
