fix: changed path to images

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -110,8 +110,8 @@
 
     <h2 data-i18="MakeOrder" class="theme-element" id="makeOrder">How to make an order</h2>
     <section class="section3 theme-element">
-      <div class="div3">
-        <img class="img6" src="../NotAuthorized/Images/1.png" alt="" >
+      <div class="div3"> 
+        <img class="img6" src="..//Images/1_1.png" alt="" >
         <h3 data-i18="Explore" class="p6_1">Explore Our Selection</h3>
         <p data-i18="ExploreDif" class="p3">
           Begin by perusing our delectable assortment of pastry kits on our
@@ -120,7 +120,7 @@
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="../NotAuthorized/Images/2.png" alt="" >
+        <img class="img6" src="../Images/1_2.png" alt="" >
         <h3 data-i18="AddToCard" class="p6_1">Add to Cart</h3>
         <p data-i18="AddToCardDif" class="p3">
           Once you've identified the irresistible treats you'd like to indulge
@@ -129,7 +129,7 @@
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="../NotAuthorized/Images/3.png" alt="" >
+        <img class="img6" src="../Images/1_3.png" alt="" >
         <h3 data-i18="Proceed">Proceed to Checkout</h3>
         <p data-i18="ProceedDif" class="p3">
           When you're ready to complete your order, proceed to our secure
@@ -139,7 +139,7 @@
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="../NotAuthorized/Images/4.png" alt="" >
+        <img class="img6" src="../Images/1_4.png" alt="" >
         <h3 data-i18="Confirmation">Confirmation and Preparation</h3>
         <p data-i18="ConfirmationDif" class="p3">
           After placing your order, you'll receive a confirmation email
