fix: change link whoIsTarla on page index.html

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -231,7 +231,7 @@
     <div class="section5 theme-element">
       <img src="../Images/section5.png" alt="">
     </div>
-    <section id="whoIsTarla" class="section6 theme-element">
+    <section class="section6 theme-element"id="whoIsTarla">
       <div class="div6">
         <img class="img6" src="../Images/6-1.png" alt="">
         <h2 data-i18="BetterThanbakery" class="p6_1">Better than the bakery</h2>
